# haskell-rust-clojure-simulation

./: .gitignore  LICENSE  README.md
clojure-circles/: project.clj
clojure-circles/src/clojure_circles/: core.clj
haskell-circles/: cabal.project.freeze  haskell-circles.cabal  haskell-squares.cabal
haskell-circles/app/: Main.hs
haskell-squares/: haskell-squares.cabal
haskell-squares/app/: Main.hs
rust-circles/: Cargo.toml
rust-circles/src/: main.rs  shader.frag
rust-squares/: Cargo.toml
rust-squares/src/: main.rs  shader.vert
