cabal-version:      2.4
name:               haskell-circles
version:            0.1.0.0

author:             André Gustavo Rigon
maintainer:         andregrigon@gmail.com

executable haskell-circles
    main-is:          Main.hs
    build-depends:    base ^>=4.14.3.0, time, 
                      vector, sdl2, text, OpenGL, bytestring, ghc-prim, deepseq
    hs-source-dirs:   app
    default-language: Haskell2010
    default-extensions: NamedFieldPuns, OverloadedStrings, BangPatterns, MagicHash
    ghc-options: -rtsopts -threaded -fllvm -funbox-strict-fields -fexcess-precision
    -- -threaded for realism\